# db-migrate

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  migration.rs  schema.rs  utils.rs
src/commands/: create.rs  down.rs  mod.rs  reset.rs  status.rs  up.rs  verify.rs
