[package]
name = "db-migrate"
version = "0.1.001"
edition = "2021"
description = "Robust database migration tool for ScyllaDB"
authors = ["Patricio Di Muzio <dimuziop@gmail.com>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "db-migrate"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# ScyllaDB driver
scylla = "0.12"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing for checksums
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Color output
colored = "2.0"

# File system operations
walkdir = "2.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"